--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -1,6 +1,33 @@
 @import "../styles/utils.module.scss";
 
 
+._navigation_component_wrapper{
+    padding: 0;
+    background-color: $WHITE;
+
+    h6{
+        cursor: pointer;
+        font-family: "Agent", sans-serif;
+        font-size: 3.25rem;
+        font-weight: 900; 
+        color: $BLACK;
+      }
+   #_navigation_component_links_ > *{
+    cursor: pointer;
+    color: $BLACK;
+    font-family: $HEADER_FONT;
+    font-weight: 500;
+    font-size: 1rem;
+    transition: all 0.2s ease-in-out;
+
+
+    &:hover{
+        color: $H_GRAY;
+    }
+
+   }
+}
+
 ._component_wrapper_{
     padding: 4rem 2rem;
     width: 100vw;
