--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -85,15 +85,15 @@
 
 
             @media only screen and (min-width: 2501px){
-          
+                font-size: 6.5rem;
             }
     
             @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
-           
+                font-size: 6rem;
             }
     
             @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
-              
+              font-size: 5rem;
             }
     
             @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
@@ -156,15 +156,15 @@
 
 
             @media only screen and (min-width: 2501px){
-          
+                font-size: 5rem;
             }
     
             @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
-           
+                font-size: 4.5rem;
             }
     
             @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
-              
+              font-size: 3.5rem;
             }
     
             @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
@@ -228,15 +228,18 @@
 
 
             @media only screen and (min-width: 2501px){
-          
+                font-size: 2.5rem;
+                max-width: 1270px;
             }
     
             @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
-           
+                font-size: 2.25rem;
+                max-width: 1200px;
             }
     
             @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
-              
+              font-size: 1.8rem;
+              max-width: 1000px;
             }
     
             @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
@@ -290,6 +293,26 @@
         ._introduction_box_btn_wrapper{
             margin-top: 1.25rem;
 
+            @media only screen and (min-width: 2501px){
+                margin-top: 2.25rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                margin-top: 2rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                margin-top: 2rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+               margin-top: 1.75rem;
+            }
+
+
+            // ###############################################################
+
+
 
 
             @media only screen and (max-width: 460px){
@@ -334,15 +357,18 @@
 
 
                 @media only screen and (min-width: 2501px){
-          
+                    font-size: 2rem;
+                    padding: 1rem 2rem;
                 }
         
                 @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
-               
+                    font-size: 1.8rem;
+                    padding: 1rem 2rem;
                 }
         
                 @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
-                  
+                    font-size: 1.5rem;
+                    padding: 1rem 2rem;
                 }
         
                 @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
