Fixed: issues at custom fonts

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,9 +2,10 @@
 
 @font-face {
   font-family: "Agent";
-  src: url("/fonts/agent.ttf");
+  src: url("/fonts/Agent.ttf");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 html,
