--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -676,8 +676,9 @@
 ._main_component_wrapper{
     padding: 4rem 2rem;
     width: 100vw;
-    // min-height: 100vh;
     // background-color: $WHITE;
+    background-color: whitesmoke;
+    // min-height: 100vh;
     // background-color: gray;
 
 
@@ -700,6 +701,31 @@
     // PROJECT COMPONENT
     #_projects_details_{
         // background-color: red;
+
+
+        // PROJECTS IMG
+        ._projects_img_{
+            display: block;
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+            object-position: center;
+            cursor: pointer;
+            border-radius: 10px;
+            transition: all 0.2s ease-in-out;
+
+            &:hover{
+                transform: translateY(-6px);
+
+                box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+            }
+
+        }
+        // END
+
+
+
+
         ._projects_title{
             margin: 0;
             font-weight: 500;
