--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -683,6 +683,21 @@
 
 
 
+    @media only screen and (max-width: 768px) { 
+        padding: 4rem 1rem;
+    }
+
+
+
+    #_projects_row_wrapper_{
+        // ROW WRAPPER
+        margin-bottom: 2rem;
+    }
+
+
+
+
+
     // H3 TAG
     ._h3_title{
         margin: 0;
@@ -693,6 +708,15 @@
         text-align: center;
         margin-bottom: 5rem;
         color: $BLACK;
+
+
+
+        @media only screen and (max-width: 600px) { 
+            font-size: 2rem;
+        }
+
+
+
     }
     // 
 
@@ -720,6 +744,28 @@
                 box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
             }
 
+
+
+            @media only screen and (max-width: 991px){
+                margin-bottom: 1.5rem;
+            
+            }
+
+
+
+            @media only screen and (max-width: 600px){
+                margin-bottom: 1rem;
+            }
+
+
+
+            @media only screen and (max-width: 425px){
+                // min-height: 300px;
+                // object-fit: cover;
+                // object-position: left center;
+            }
+
+
         }
         // END
 
@@ -733,6 +779,12 @@
             font-size: 1.5rem;
             margin-bottom: 1rem;
             color: $BLACK;
+
+
+            @media only screen and (max-width: 600px){
+                font-size: 1.25rem;
+            }
+
         }
 
 
@@ -740,6 +792,17 @@
             margin: 0;
             font-size: 1rem;
             color: $BLACK;
+
+
+            
+            @media only screen and (max-width: 991px){
+               max-width: 800px;
+               width: 100%;
+            }
+
+            @media only screen and (max-width: 600px){
+                font-size: 0.85rem;
+            }
         }
 
         // Projects Tag
@@ -770,6 +833,13 @@
                 background-color: #09934e;
                 color: $WHITE;
                }
+
+
+               @media only screen and (max-width: 600px){
+                font-size: 0.8rem;
+            }
+
+
             }
         }
         // End
@@ -779,6 +849,14 @@
         // Action buttons
         ._projects_action_buttons_{
             margin-top: 4rem;
+
+
+            @media only screen and (max-width: 1199px) { 
+                margin-top: 2rem;
+            }
+
+
+
             a{
                 all: unset;
                 cursor: pointer;
@@ -798,6 +876,11 @@
                         text-decoration: underline;
                         color: #4361ee;
                     }
+                }
+
+
+                @media only screen and (max-width: 600px){
+                    font-size: 0.9rem;
                 }
 
             }
