Added: about component styling

--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -1115,3 +1115,458 @@
 
 
 
+// ABOUT 
+
+._about_component_wrapper{
+    padding: 4rem 2rem;
+    width: 100vw;
+    background-color: $WHITE;
+    // min-height: 100vh;
+
+
+
+    @media only screen and (max-width: 768px) { 
+        padding: 4rem 1rem;
+    }
+
+
+    @media only screen and (max-width: 425px){
+        padding: 4rem 0.3rem;
+    }
+
+
+
+    #_projects_row_wrapper_{
+        // ROW WRAPPER
+        margin-bottom: 7rem;
+
+
+        @media only screen and (max-width: 425px){
+            margin-bottom: 4rem;
+        }
+
+
+    }
+
+
+
+
+
+    // H3 TAG
+    ._h3_title{
+        margin: 0;
+        font-family: $HEADER_FONT;
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 2.5rem;
+        text-align: center;
+        margin-bottom: 5rem;
+        color: $BLACK;
+
+
+
+
+
+
+        @media only screen and (min-width: 2501px){
+            font-size: 5rem;
+        }
+
+        @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+            font-size: 4rem;
+        }
+
+        @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+          font-size: 3.5rem;
+        }
+
+        @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+           font-size: 3rem;
+        }
+
+        // ############################################################
+
+
+
+
+
+
+
+
+
+        @media only screen and (max-width: 600px) {
+            margin-bottom: 2rem; 
+            font-size: 2rem;
+        }
+
+
+
+    }
+    // 
+
+
+  // @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+
+    ._about_paragraph_{
+        margin: 0 auto;
+        max-width: 800px;
+        width: 100%;
+
+        // background-color: red;
+
+        font-size: 1.25rem;
+        color: $BLACK;
+
+
+
+
+        @media only screen and (min-width: 2501px){
+            font-size: 2rem;
+        }
+
+        @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+            font-size: 1.75rem;
+        }
+
+        @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+            max-width: 900px; 
+            font-size: 2rem;
+        }
+
+        @media only screen and (min-width: 1400px) and (max-width: 1800px) {
+            max-width: 900px; 
+           font-size: 1.5rem;
+        }
+
+        // ############################################################
+
+
+
+
+        
+        @media only screen and (max-width: 991px){
+        //    NEW CSS
+        }
+
+        @media only screen and (max-width: 600px){
+           //    NEW CSS
+        }
+
+        @media only screen and (max-width: 425px){
+            //    NEW CSS
+        }
+    }
+
+    // @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+
+
+
+
+
+
+
+    // PROJECT COMPONENT
+    #_projects_details_{
+        // background-color: red;
+
+
+        // PROJECTS IMG
+        ._projects_img_{
+            display: block;
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+            object-position: center;
+            cursor: pointer;
+            border-radius: 10px;
+            transition: all 0.2s ease-in-out;
+
+            &:hover{
+                transform: translateY(-6px);
+
+                box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+            }
+
+
+
+
+            @media only screen and (min-width: 2501px){
+                min-height: 800px;
+                object-position: left center;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                min-height: 600px;
+                object-position: left center;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+              min-height: 500px;
+              object-position: left center;
+            }
+    
+
+            // ######################################################################
+
+
+            @media only screen and (max-width: 991px){
+                margin-bottom: 1.5rem;
+            
+            }
+
+
+
+            @media only screen and (max-width: 600px){
+                margin-bottom: 1rem;
+            }
+
+        }
+        // END
+
+
+
+
+        ._projects_title{
+            margin: 0;
+            font-weight: 500;
+            font-family: $HEADER_FONT;
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+            color: $BLACK;
+
+
+
+
+
+
+            @media only screen and (min-width: 2501px){
+                font-size: 3.5rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 3rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+              font-size: 2.5rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+               font-size: 2rem;
+            }
+    
+            // ############################################################
+
+
+
+
+
+
+
+
+
+
+            @media only screen and (max-width: 600px){
+                font-size: 1.25rem;
+            }
+
+
+            @media only screen and (max-width: 425px){
+                font-size: 1rem;
+            }
+
+        }
+
+
+       
+
+        // Projects Tag
+        ._projects_tags_wrapper_{
+            margin-top: 1.5rem;
+
+
+
+            @media only screen and (min-width: 2501px){
+                margin-top: 2rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                margin-top: 2rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                margin-top: 2rem;
+            }
+
+
+            // ###############################################################
+
+
+
+
+
+
+
+
+
+
+            span{
+                margin-right: 1rem;
+                font-size: 0.9rem;
+                padding: 0.2rem 0.4rem;
+                color: $BLACK;
+                border-radius: 3px;
+               &:nth-child(1){
+                background-color: #f7e018;
+               }
+
+               &:nth-child(2){
+                background-color: 	#61dbfb;
+             
+               }
+
+               &:nth-child(3){
+                background-color: $BLACK;
+                color: $WHITE
+               }
+
+               &:nth-child(4){
+                background-color: #09934e;
+                color: $WHITE;
+               }
+
+
+
+
+
+
+               @media only screen and (min-width: 2501px){
+                font-size: 1.75rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 1.5rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+              font-size: 1.25rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+               font-size: 1rem;
+            }
+    
+            // ############################################################
+
+
+
+
+
+
+
+
+
+
+
+
+               @media only screen and (max-width: 600px){
+                font-size: 0.8rem;
+            }
+
+
+            @media only screen and (max-width: 425px){
+                margin-right: 0.8rem;
+            }
+
+
+            }
+        }
+        // End
+
+        // ############################################
+
+        // Action buttons
+        ._projects_action_buttons_{
+            margin-top: 4rem;
+
+
+            @media only screen and (max-width: 1199px) { 
+                margin-top: 2rem;
+            }
+
+
+
+            a{
+                all: unset;
+                cursor: pointer;
+                margin-right: 1rem;
+                font-size: 1rem;
+
+                &:nth-child(1){
+                    text-decoration: underline;
+                    color: #4361ee;
+                }
+
+                
+                &:nth-child(2){
+                    color: $BLACK;
+
+                    &:hover{
+                        text-decoration: underline;
+                        color: #4361ee;
+                    }
+                }
+
+
+
+
+
+
+
+
+
+
+                @media only screen and (min-width: 2501px){
+                    font-size: 2rem;
+                }
+        
+                @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                    font-size: 1.75rem;
+                }
+        
+                @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                  font-size: 1.5rem;
+                }
+        
+                @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                   font-size: 1.25rem;
+                }
+        
+                // ############################################################
+
+
+
+
+
+
+
+
+
+
+
+
+                @media only screen and (max-width: 600px){
+                    font-size: 0.9rem;
+                }
+
+                @media only screen and (max-width: 425px){
+                    font-size: 0.8rem;
+                }
+
+            }
+        }
+        // End
+    }
+    // END
+
+}
