--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -1601,12 +1601,85 @@
 
 
 
-    // SKILLS ICONS
-    ._skills_icons_{
-        width: 65px;
-        height: 65px;
+    ._skills_box_{
+        ._skills_box_contents_{
+            margin: 0 2rem;
+            display: inline-block;
+            margin-bottom: 2rem;
+
+
+
+            @media only screen and (max-width: 500px){
+                margin-right: 1.5rem;
+                margin-left: 1.5rem;
+            }
+
+
+            @media only screen and (max-width: 375px){
+                margin-right: 1rem;
+                margin-left: 1rem;
+            }
+
+
+
+            // SKILLS ICONS
+            ._skills_icons_{
+                width: 70px;
+                height: 70px;
+
+
+
+
+
+                @media only screen and (min-width: 2501px){
+                    width: 120px;
+                    height: 120px;
+                }
+        
+                @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                    width: 110px;
+                    height: 110px;
+                }
+        
+                @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                    width: 100px;
+                    height: 100px;
+                }
+        
+                @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                    width: 80px;
+                    height: 80px;
+                } 
+
+
+
+                // #############################################################
+
+
+
+
+                @media only screen and (max-width: 1200px) {
+                    width: 60px;
+                    height: 60px;
+                 }
+
+
+                 @media only screen and (max-width: 600px){
+                    width: 50px;
+                    height: 50px;
+                 }
+
+
+                 @media only screen and (max-width: 500px){
+                    width: 40px;
+                    height: 40px;
+                 }
+
+            }
+            // END
+        }
     }
-    // END
+
 
 
 
