--- a/styles/COMPONENT.module.scss
+++ b/styles/COMPONENT.module.scss
@@ -2216,19 +2216,23 @@
 
 
         @media only screen and (min-width: 2501px){
-            font-size: 2rem;
+            max-width: 900px;
+            font-size: 2.5rem;
         }
 
         @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
-            font-size: 1.75rem;
+            max-width: 800px;
+            font-size: 2.25rem;
         }
 
         @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
-          font-size: 1.5rem;
+            max-width: 800px;
+          font-size: 1.85rem;
         }
 
         @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
-           font-size: 1.25rem;
+           max-width: 700px;
+           font-size: 1.5rem;
         }
 
         // ############################################################
@@ -2279,6 +2283,41 @@
         font-size: 1.25rem;
 
 
+
+
+        @media only screen and (min-width: 2501px){
+            
+            font-size: 2.5rem;
+        }
+
+        @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+            
+            font-size: 2.25rem;
+        }
+
+        @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+            
+          font-size: 1.85rem;
+        }
+
+        @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+          
+           font-size: 1.5rem;
+        }
+
+        // ############################################################
+
+
+
+
+
+
+
+
+
+
+
+
         @media only screen and (max-width: 991px){
             display: inline-block;
             margin-bottom: 1rem;
@@ -2313,6 +2352,32 @@
         font-size: 1.75rem;
         font-family: $HEADER_FONT;
         margin-bottom: 1rem;
+        font-weight: 700;
+
+
+
+
+        @media only screen and (min-width: 2501px){
+            font-size: 3.75rem;
+        }
+
+        @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+            font-size: 3.25rem;
+        }
+
+        @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+            font-size: 2.75rem;
+        }
+
+        @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+           font-size: 2rem;
+        }
+
+
+
+        // ############################################################
+
+
 
 
         @media only screen and (max-width: 991px){
@@ -2336,6 +2401,28 @@
         input, textarea{
             max-width: 450px;
             width: 100%;
+
+
+
+            @media only screen and (min-width: 2501px){
+                max-width: 650px;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                max-width: 600px;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                max-width: 550px;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+               max-width: 550px;
+            }
+
+
+
+            // #######################################################################
 
 
             @media only screen and (max-width: 1199px) {
@@ -2366,6 +2453,27 @@
             font-family: $HEADER_FONT;
 
 
+
+
+            
+            @media only screen and (min-width: 2501px){
+                font-size: 2rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 1.75rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                font-size: 1.5rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+               font-size: 1.25rem;
+            }
+
+
+            // #############################################################
             
 
 
@@ -2384,9 +2492,55 @@
             &::placeholder{
                 font-size: 1rem;
                 color: $H_GRAY;
+
+
+                @media only screen and (min-width: 2501px){
+                    font-size: 2rem;
+                }
+        
+                @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                    font-size: 1.75rem;
+                }
+        
+                @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                    font-size: 1.5rem;
+                }
+        
+                @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                    font-size: 1.25rem;
+                }
+    
+    
+                // #############################################################
             }
 
-          
+
+
+            @media only screen and (min-width: 2501px){
+                font-size: 2rem;
+                padding: 1rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 1.75rem;
+                padding: 1rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                font-size: 1.5rem;
+                padding: 1rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                font-size: 1.25rem;
+            }
+
+
+            // #############################################################
+
+
+
+
 
         }
 
@@ -2397,6 +2551,42 @@
             font-size: 1rem;
             color: $BLACK;
             border-radius: 5px;
+
+
+
+
+
+            @media only screen and (min-width: 2501px){
+                font-size: 2rem;
+                padding: 1rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 1.75rem;
+                padding: 1rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                font-size: 1.5rem;
+                padding: 1rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                font-size: 1.25rem;
+            }
+
+
+            // #############################################################
+
+
+
+
+
+
+
+
+
+
         }
 
         button{
@@ -2412,6 +2602,33 @@
                 background-color: $H_BLACK;
             }
 
+
+
+
+            @media only screen and (min-width: 2501px){
+                font-size: 2rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 1.75rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                font-size: 1.5rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                font-size: 1.25rem;
+            }
+
+
+            // #############################################################
+
+
+
+
+
+
         }
 
         // FORM MESSAGE ERROR
@@ -2420,6 +2637,34 @@
             font-size: 1rem;
             color: red;
             font-style: italic;
+
+
+
+            @media only screen and (min-width: 2501px){
+                font-size: 2rem;
+            }
+    
+            @media only screen and (min-width: 2201px) and (max-width: 2500px) { 
+                font-size: 1.75rem;
+            }
+    
+            @media only screen and (min-width: 1801px) and (max-width: 2200px) { 
+                font-size: 1.5rem;
+            }
+    
+            @media only screen and (min-width: 1400px) and (max-width: 1800px) { 
+                font-size: 1.25rem;
+            }
+
+
+            // #############################################################
+
+
+
+
+
+
+
         }
         // END
     }
